frame/support/test/tests/construct_runtime_ui/conflicting_module_name.stderr
error: Two pallets with the same name!
 --> tests/construct_runtime_ui/conflicting_module_name.rs:7:3
  |
7 |         Balance: balances::{Pallet},
  |         ^^^^^^^

error: Two pallets with the same name!
 --> tests/construct_runtime_ui/conflicting_module_name.rs:8:3
  |
8 |         Balance: balances::{Pallet},
  |         ^^^^^^^
